Fix button size on small phone

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -82,7 +82,7 @@ h1 {
     border-radius: 0.2rem !important;
   }
 
-  @media screen and (max-width: 300px) {
+  @media screen and (max-width: 400px) {
     padding: 0.15rem 0.35rem !important;
     font-size: 0.6rem !important;
     line-height: 1 !important;
